<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MyTheme"
    tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/resultsCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_final"
            />

    <androidx.cardview.widget.CardView
        android:id="@+id/resultsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/nice_blue"
        app:cardElevation="12dp"
        app:cardCornerRadius="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resultsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_1"
        android:textColor="@color/white_85"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/resultsView"
        app:layout_constraintBottom_toTopOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        tools:text="@string/congratulations_1"

        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_2"
        android:textColor="@color/white_85"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintBottom_toTopOf="@id/tv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        tools:text="@string/congratulations_2"
        />
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ugly_yellow"
        android:textSize="28sp"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintBottom_toTopOf="@id/startOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        tools:text="@string/congratulations_3"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dusk_blue"
        android:textAllCaps="true"
        android:text="@string/start_over"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:theme="@style/MatButton"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="4dp"
        app:strokeColor="@color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeWidth="1dp"
        tools:visibility="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
<!--    <Button-->
<!--        android:id="@+id/startOver"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/start_over"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tv2"-->
<!--        tools:visibility="visible"-->
<!--        />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>